Fixed image size and overflow on intro page.

--- a/public/stylesheets/index.less
+++ b/public/stylesheets/index.less
@@ -14,6 +14,7 @@ div#intro {
 	background: white;
 	text-align: center;
 	margin-top: -60px;
+	overflow: hidden;
 
 	div#intro_top {
 		display: table-cell;
@@ -27,7 +28,8 @@ div#intro {
 
 			img {
 				padding: 10px;
-				width: 400px;
+				width: 90%;
+				max-width: 400px;
 				border-radius: 5%;
 				// background: radial-gradient(#FFF 15%, fade(#000, 12%) 30%);
 				background: fade(@darker, 100%);
